--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@types/styled-components": "^5.1.20",
+    "axios": "^0.25.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
